<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/delete_teams_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintBottom_toTopOf="@id/deleteTeamsRegion"/>

        <RelativeLayout
            android:id="@+id/deleteTeamsRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/cancelDeleteTeamsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/confirmDeleteTeamsButton"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/confirmDeleteTeamsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/delete_teams"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>