<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.example.crosscountryscoring.deleteteams.DeleteState"/>
        <variable
            name="team"
            type="com.example.crosscountryscoring.database.Team" />
        <variable
            name="delete"
            type="com.example.crosscountryscoring.deleteteams.DeleteState" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/deleteTeamCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="@{delete == DeleteState.DELETE ? true : false}"/>
        <EditText
            android:id="@+id/team_name_edit_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@={team.name}"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_toEndOf="@id/deleteTeamCheckbox"/>
    </RelativeLayout>
</layout>